Include Bootstrap CDN and make some adjustments in text

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,1 +1,20 @@
-<h1>Bem-vindo ao EventeX!</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="jumbotron">
+				<h1>Bem-vindo ao EventeX 2013!</h1>
+				<p>O evento mais sensacional do ano depois do Dev in Rio!</p>
+				<p>
+					<button class="btn btn-lg btn-primary disabled">Inscrições no próximo domingo</button>
+				</p>
+				<small class="muted">Para dúvidas e mais informações favor entrar em contato com <a href="mailto:rafaelkellermann@gmail.com">rafaelkellermann@gmail.com</a>.</small>
+			</div>
+		</div>
+	</body>
+</html>
